Name:               modelchecking 
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Pascal Hof
Maintainer:          pascal.hof@tu-dortmund.de
-- Copyright:           
Stability:           Experimental
Category:            Language
Build-type:       Simple 
Cabal-version:       >=1.9.2

Library
  ghc-options: -Wall
  Exposed-modules:   ModelChecking.Logic.Ctl,
                     ModelChecking.Logic.Saql,
                     ModelChecking.Kripke, 
                     ModelChecking.KripkePrint,
                     ModelChecking.AstToKripke,
                     ModelChecking.Logic
  Hs-Source-Dirs: src
  
  Build-depends: base ,
                 containers,
                 fgl ==5.4.2.4,
                 graphviz == 2999.12.0.3,
                 array ,
                 mtl == 2.0.1.0
