Name:               modelchecking 
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Pascal Hof
Maintainer:          pascal.hof@tu-dortmund.de
-- Copyright:           
Stability:           Experimental
Category:            Language
Build-type:       Simple 
Cabal-version:       >=1.9.2

Library
  ghc-options: -Wall
  Exposed-modules:   ModelChecking.Logic.Ctl,
                     ModelChecking.Logic.TL,
                     ModelChecking.Kripke, 
                     ModelChecking.KripkePrint,
                     ModelChecking.AstToKripke,
                     ModelChecking.Logic
  Hs-Source-Dirs: src
  
  Build-depends: base ,
                 containers,
                 fgl ==5.4.2.4,
                 graphviz == 2999.12.0.3,
                 array ,
                 mtl == 2.0.1.0


benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          BenchAll.hs
  build-depends:    base, deepseq, ghc-prim,
                    criterion , derive
  include-dirs:     include
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6
