Name:               modelchecking 
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Pascal Hof
Maintainer:          pascal.hof@tu-dortmund.de
-- Copyright:           
Stability:           Experimental
Category:            Language
Build-type:       Simple 
Cabal-version:       >=1.9.2

Library
  ghc-options: -Wall
  Exposed-modules:   ModelChecking.Logic.Ctl,
                     ModelChecking.Logic.TL,
                     ModelChecking.Kripke, 
                     ModelChecking.KripkePrint,
                     ModelChecking.AstToKripke,
                     ModelChecking.Logic
  Hs-Source-Dirs: src
  
  Build-depends: base == 4.6.0.0 ,
                 containers == 0.5.0.0 ,
                 fgl ==5.4.2.4,
                 graphviz , 
                 array  == 0.4.0.1,
                 syb == 0.3.7 , 
                 mtl == 2.1.2


benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          BenchKripke.hs
  build-depends:    base, deepseq, ghc-prim,
                    criterion , derive
  include-dirs:     include
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6

test-suite basic
    type: exitcode-stdio-1.0
    Hs-Source-Dirs: test 
    main-is: Main.hs
    build-depends: base == 4.6.0.0, 
                   containers == 0.5.0.0,
                   test-framework == 0.8, 
                   test-framework-hunit == 0.3.0,
                   test-framework-quickcheck2 == 0.3.0.1,
                   modelchecking == 0.1,
                   HUnit == 1.2.5.1, 
                   QuickCheck == 2.4.2
